jenkins-master/yaml/jenkins-cluster.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: NAMESPACE
---
apiVersion: v1
kind: Service
metadata:
  name: NAMESPACE-jenkins
  labels:
    name: NAMESPACE-jenkins
  namespace: NAMESPACE
  annotations:
    kubernetesReverseproxy: "{\"hosts\": [{\"host\": \"jenkins-NAMESPACE.CL_NAME.***.**.com\", \"port\": \"443\", \"ssl\": 1, \"sslCrt\": \"CL_NAME.***.**.crt\", \"sslKey\": \"CL_NAME.***.***.com.key\"}]}"
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: NAMESPACE-jenkins
